# milho-rust

./: .gitignore  Cargo.toml  LANG.md  README.md  fuba-exe  repl.milho
canjica/: Cargo.toml
canjica/src/: eval.rs  lib.rs  tests.rs
canjica/src/eval/: arithmetic.rs  boolean.rs  comparison.rs  conditional.rs  definition.rs  function.rs  io.rs  list.rs  special.rs  vector.rs
canjica/src/tests/: arithmetics.rs  comparison.rs  list.rs
fuba/: Cargo.toml
fuba/src/: file_interpreter.rs  main.rs  repl.rs
fuba/src/built_ins/: io.milho  list.milho  vector.milho
fuba/src/std/: basic.milho  basic.rs  comparison.milho  io.milho  list.milho  math.milho  vector.milho
pipoquinha/: Cargo.toml
pipoquinha/src/: display.rs  identifier.rs  lib.rs  list.rs  operations.rs  parser.rs  types.rs
pipoquinha/src/operations/: atom.rs  boolean.rs  numeric.rs
pipoquinha/src/parser/: action.rs  arithmetic.rs  atom.rs  boolean.rs  built_in.rs  comparison.rs  def.rs  defn.rs  file.rs  function.rs  identifier.rs  integer.rs  list.rs  macros.rs  number.rs  reserved_keywords.rs  space.rs  string.rs  vector.rs
pipoquinha/src/types/: atom.rs  boolean.rs  built_in.rs  function.rs  list.rs  number.rs  vector.rs
