[package]
name = "fuba"
version = "0.1.0"
authors = ["Celso Bonutti Filho <celso.bonuttif@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canjica = {path = "../canjica"}
pipoquinha = {path = "../pipoquinha"}